--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Icebreaker Generator</title>
+  <title>Icebreaker Themes</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Icebreaker Generator</h1>
-    <div id="icebreaker" class="icebreaker">Click the button to get an icebreaker!</div>
-    <button id="generate-btn">Generate Icebreaker</button>
+    <h1>Choose a Theme</h1>
+    <nav class="theme-nav">
+      <a href="general.html">General</a>
+      <a href="work.html">Work</a>
+      <a href="fun.html">Fun</a>
+      <a href="deep.html">Deep</a>
+    </nav>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
